--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"   rel="stylesheet">
-
+<link rel="shortcut icon" href="assets/icon-react.png" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto</title>
+  <title>Business-Card</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
